gave id's to html paragraphs, wrote random number generator in script

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h1 class="neonText">Mixed Messages</h1>
         <h2>See your daily horoscope<span> (below)</span></h2>
     </header>
-    <div id="prediction">
-        <p>Your ruling planet is the moon.     
+    
+        <p id="rulingPlanet">Your ruling planet is the moon.     
         </p>
-        <p>You will be extra lucky today!!
+        <p id="luckFactor">You will be extra lucky today!!
         </p>
-        <p>Watch out for black cats!!</p>
-    </div>
+        <p id="topTips">Watch out for black cats!!</p>
+    
     <script src="script.js"></script>
 </body>
 </html>
