created code to write messages to html

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
         <h2>See your daily horoscope<span> (below)</span></h2>
     </header>
     
-        <p id="rulingPlanet">Your ruling planet is the moon.     
+        <p id="rulingPlanet"></p>
+
         </p>
-        <p id="luckFactor">You will be extra lucky today!!
+        <p id="luckFactor">
+
         </p>
-        <p id="topTips">Watch out for black cats!!</p>
+        <p id="topTips">
+
+        </p>
     
     <script src="script.js"></script>
 </body>
